book/tests/snapshots/snapshot__run_display_reference_prql@transforms__append-3.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/transforms/append-3.prql
---
from employees_1
select [
  first_name,
  last_name,
]
difference (
  from employees_2
  select [
  first_name,
  last_name,
]
)



