book/tests/snapshots/snapshot__run_display_reference_prql@transforms__from_text-0.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/transforms/from_text-0.prql
---
from_text "
a,b,c
1,2,3
4,5,6
"
derive [
  d = b + c,
  answer = 20 * 2 + 2,
]



