book/tests/snapshots/snapshot__run_display_reference_prql@transforms__group-2.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/transforms/group-2.prql
---
from employees
group role (
  sort join_date
  take 1
)



