book/tests/snapshots/snapshot__run_display_reference_prql@transforms__join-1.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/transforms/join-1.prql
---
from employees
join side:left p = positions [employees.id == p.employee_id]



