book/tests/snapshots/snapshot__run_display_reference_prql@transforms__select-5.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/transforms/select-5.prql
---
from tracks
select [
  track_id,
  title,
  composer,
  bytes,
]
select not [
  title,
  composer,
]



