book/tests/snapshots/snapshot__run_display_reference_prql@transforms__select-6.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/transforms/select-6.prql
---
from artists
derive nick = name
select not [artists.`*`]



